--- a/websettings.json
+++ b/websettings.json
@@ -1,40 +1,19 @@
 {
-    "AppName": "Template",
-    "lang": "it",
-    "description": "Descrizione",
+    "AppName": "Generatori",
+    "lang": "IT",
+    "description": "Sito dove i vari Generatori di Br1Brown sono immagazzinati",
     "meta": {
         "MobileFriendly": true,
         "iOSFullScreenWebApp": true,
         "mobileOptimizationWidth": 320,
         "refreshIntervalInSeconds": 900,
-        "keywords": [
-            "xxx",
-            "xxxx"
-        ]
+        "keywords": []
     },
     "API": {
         "EndPoint": "API",
         "key": "frontend"
     },
     "favIcon": "asset/favicon.png",
-    "colorTema": "#212529",
-    "itemsMenu": [
-        {
-            "nome": "Social",
-            "route": "social"
-        }
-    ],
-    "footer": true,
-    "url": {
-        "PrivacyPolicy": "",
-        "CookiePolicy": ""
-    },
-    "smoke": {
-        "enable": true,
-        "color": "#8fc7ff",
-        "opacity": 0.4,
-        "maximumVelocity": 100,
-        "particleRadius": 250,
-        "density": 5
-    }
+    "colorTema": "#b3ffb7",
+    "footer": true
 }
